Make bb-storage buildable on Windows
Because we stub out file system and memory map support, the resulting
binary is a lot less functional. Still, it's good to hook up a platform
like this to the build, so that we can ensure we don't add too many
UNIX-isms to the code base.

Partially addresses: #8

--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -6,19 +6,51 @@ go_library(
         "directory.go",
         "file.go",
         "file_info.go",
-        "local_directory.go",
         "local_directory_darwin.go",
+        "local_directory_disabled.go",
         "local_directory_freebsd.go",
         "local_directory_linux.go",
+        "local_directory_unix.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/util:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
-        "@org_golang_x_sys//unix:go_default_library",
-    ],
+    deps = select({
+        "@io_bazel_rules_go//go/platform:android": [
+            "//pkg/util:go_default_library",
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:darwin": [
+            "//pkg/util:go_default_library",
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:freebsd": [
+            "//pkg/util:go_default_library",
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:ios": [
+            "//pkg/util:go_default_library",
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "//pkg/util:go_default_library",
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:windows": [
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 go_test(
