--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -28,6 +28,10 @@ go_library(
         "@io_bazel_rules_go//go/platform:linux": [
             "@org_golang_x_sys//unix:go_default_library",
         ],
+        "@io_bazel_rules_go//go/platform:windows": [
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+        ],
         "//conditions:default": [],
     }),
 )
