--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -1,75 +1,181 @@
-name: master
-on:
-  push:
-    branches:
-    - master
-jobs:
-  build_and_test:
-    runs-on: ubuntu-latest
-    container: docker://l.gcr.io/google/bazel:2.1.0
-    steps:
-    - name: Check out source code
-      uses: actions/checkout@v1
-
-    - name: Buildifier
-      run: bazel run @com_github_bazelbuild_buildtools//:buildifier
-    - name: Gazelle
-      run: bazel run //:gazelle -- update-repos -from_file=go.mod -to_macro go_dependencies.bzl%go_dependencies -prune && bazel run //:gazelle
-    - name: Gofmt
-      run: bazel run @go_sdk//:bin/gofmt -- -s -w .
-    - name: Clang format
-      run: find . -name '*.proto' -exec bazel run @llvm_toolchain//:bin/clang-format -- -i {} +
-    - name: Test style conformance
-      run: git diff --exit-code HEAD --
-    - name: Golint
-      run: bazel run @org_golang_x_lint//golint -- -set_exit_status $(pwd)/...
-    - name: Check for ineffective assignments
-      run: bazel run @com_github_gordonklaus_ineffassign//:ineffassign $(pwd)
-
-    - name: Linux build and test
-      run: bazel test --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64 //...
-    - name: Upload bb_replicator for Linux
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_replicator.linux_amd64
-        path: bazel-bin/cmd/bb_replicator/linux_amd64_pure_stripped/bb_replicator
-    - name: Upload bb_storage for Linux
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_storage.linux_amd64
-        path: bazel-bin/cmd/bb_storage/linux_amd64_pure_stripped/bb_storage
-
-    - name: macOS build
-      run: bazel build --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //...
-    - name: Upload bb_replicator for macOS
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_replicator.darwin_amd64
-        path: bazel-bin/cmd/bb_replicator/darwin_amd64_pure_stripped/bb_replicator
-    - name: Upload bb_storage for macOS
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_storage.darwin_amd64
-        path: bazel-bin/cmd/bb_storage/darwin_amd64_pure_stripped/bb_storage
-
-    - name: FreeBSD build
-      run: bazel build --platforms=@io_bazel_rules_go//go/toolchain:freebsd_amd64 //cmd/bb_storage //cmd/bb_replicator
-    - name: Upload bb_replicator for FreeBSD
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_replicator.freebsd_amd64
-        path: bazel-bin/cmd/bb_replicator/freebsd_amd64_pure_stripped/bb_replicator
-    - name: Upload bb_storage for FreeBSD
-      uses: actions/upload-artifact@v2-preview
-      with:
-        name: bb_storage.freebsd_amd64
-        path: bazel-bin/cmd/bb_storage/freebsd_amd64_pure_stripped/bb_storage
-
-    - name: Install Docker credentials
-      run: mkdir ~/.docker && echo "${DOCKER_CONFIG_JSON}" > ~/.docker/config.json
-      env:
-        DOCKER_CONFIG_JSON: ${{ secrets.DOCKER_CONFIG_JSON }}
-    - name: Push container bb-replicator
-      run: bazel run //cmd/bb_replicator:bb_replicator_container_push
-    - name: Push container bb-storage
-      run: bazel run //cmd/bb_storage:bb_storage_container_push
+{
+   "jobs": {
+      "build_and_test": {
+         "container": "docker://l.gcr.io/google/bazel:3.3.1",
+         "runs-on": "ubuntu-latest",
+         "steps": [
+            {
+               "name": "Check out source code",
+               "uses": "actions/checkout@v1"
+            },
+            {
+               "name": "Buildifier",
+               "run": "bazel run @com_github_bazelbuild_buildtools//:buildifier"
+            },
+            {
+               "name": "Gazelle",
+               "run": "bazel run //:gazelle -- update-repos -from_file=go.mod -to_macro go_dependencies.bzl%go_dependencies -prune && bazel run //:gazelle"
+            },
+            {
+               "name": "Gofmt",
+               "run": "bazel run @go_sdk//:bin/gofmt -- -s -w ."
+            },
+            {
+               "name": "Clang format",
+               "run": "find . -name '*.proto' -exec bazel run @llvm_toolchain//:bin/clang-format -- -i {} +"
+            },
+            {
+               "name": "GitHub workflows",
+               "run": "bazel build //tools/github_workflows && cp bazel-bin/tools/github_workflows/* .github/workflows"
+            },
+            {
+               "name": "Test style conformance",
+               "run": "git diff --exit-code HEAD --"
+            },
+            {
+               "name": "Golint",
+               "run": "bazel run @org_golang_x_lint//golint -- -set_exit_status $(pwd)/..."
+            },
+            {
+               "name": "Check for ineffective assignments",
+               "run": "bazel run @com_github_gordonklaus_ineffassign//:ineffassign $(pwd)"
+            },
+            {
+               "name": "linux_amd64: build and test",
+               "run": "bazel test --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64 //..."
+            },
+            {
+               "name": "linux_amd64: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64 //cmd/bb_replicator $(pwd)/bb_replicator"
+            },
+            {
+               "name": "linux_amd64: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.linux_amd64",
+                  "path": "bb_replicator"
+               }
+            },
+            {
+               "name": "linux_amd64: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64 //cmd/bb_storage $(pwd)/bb_storage"
+            },
+            {
+               "name": "linux_amd64: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.linux_amd64",
+                  "path": "bb_storage"
+               }
+            },
+            {
+               "name": "darwin_amd64: build and test",
+               "run": "bazel build --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //..."
+            },
+            {
+               "name": "darwin_amd64: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //cmd/bb_replicator $(pwd)/bb_replicator"
+            },
+            {
+               "name": "darwin_amd64: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.darwin_amd64",
+                  "path": "bb_replicator"
+               }
+            },
+            {
+               "name": "darwin_amd64: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //cmd/bb_storage $(pwd)/bb_storage"
+            },
+            {
+               "name": "darwin_amd64: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.darwin_amd64",
+                  "path": "bb_storage"
+               }
+            },
+            {
+               "name": "freebsd_amd64: build and test",
+               "run": "bazel build --platforms=@io_bazel_rules_go//go/toolchain:freebsd_amd64 //cmd/bb_replicator //cmd/bb_storage"
+            },
+            {
+               "name": "freebsd_amd64: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:freebsd_amd64 //cmd/bb_replicator $(pwd)/bb_replicator"
+            },
+            {
+               "name": "freebsd_amd64: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.freebsd_amd64",
+                  "path": "bb_replicator"
+               }
+            },
+            {
+               "name": "freebsd_amd64: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:freebsd_amd64 //cmd/bb_storage $(pwd)/bb_storage"
+            },
+            {
+               "name": "freebsd_amd64: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.freebsd_amd64",
+                  "path": "bb_storage"
+               }
+            },
+            {
+               "name": "windows_amd64: build and test",
+               "run": "bazel build --platforms=@io_bazel_rules_go//go/toolchain:windows_amd64 //..."
+            },
+            {
+               "name": "windows_amd64: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:windows_amd64 //cmd/bb_replicator $(pwd)/bb_replicator.exe"
+            },
+            {
+               "name": "windows_amd64: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.windows_amd64",
+                  "path": "bb_replicator.exe"
+               }
+            },
+            {
+               "name": "windows_amd64: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:windows_amd64 //cmd/bb_storage $(pwd)/bb_storage.exe"
+            },
+            {
+               "name": "windows_amd64: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.windows_amd64",
+                  "path": "bb_storage.exe"
+               }
+            },
+            {
+               "env": {
+                  "DOCKER_CONFIG_JSON": "${{ secrets.DOCKER_CONFIG_JSON }}"
+               },
+               "name": "Install Docker credentials",
+               "run": "mkdir ~/.docker && echo \"${DOCKER_CONFIG_JSON}\" > ~/.docker/config.json"
+            },
+            {
+               "name": "Push container bb-autoscaler",
+               "run": "bazel run //cmd/bb_replicator:bb_replicator_container_push"
+            },
+            {
+               "name": "Push container bb-autoscaler",
+               "run": "bazel run //cmd/bb_storage:bb_storage_container_push"
+            }
+         ]
+      }
+   },
+   "name": "master",
+   "on": {
+      "push": {
+         "branches": [
+            "master"
+         ]
+      }
+   }
+}
