CI: Make the GitHub workflow templates public
That way we can let bb-remote-execution, bb-browser, etc. also use them.

--- a/tools/github_workflows/BUILD.bazel
+++ b/tools/github_workflows/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet
 jsonnet_library(
     name = "workflows_template",
     srcs = ["workflows_template.libsonnet"],
+    visibility = ["//visibility:public"],
 )
 
 jsonnet_to_json(
