--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -3,7 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "add_metadata_interceptor.go",
         "allow_authenticator.go",
         "any_authenticator.go",
         "authenticator.go",
@@ -11,7 +10,10 @@ go_library(
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "metadata_adding_interceptor.go",
+        "metadata_forwarding_and_reusing_interceptor.go",
         "metadata_forwarding_interceptor.go",
+        "metadata_header_values.go",
         "request_metadata_fetching_stats_handler.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
@@ -46,11 +48,12 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
-        "add_metadata_interceptor_test.go",
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "metadata_adding_interceptor_test.go",
+        "metadata_forwarding_and_reusing_interceptor_test.go",
         "metadata_forwarding_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
