Add more facilities for routing based on instance names
- Rename allowAcUpdatesForInstances to allowAcUpdatesForInstanceName-
  Prefixes. Unlike the old option, the new one does prefix matching on
  instance names. This means that you can use [''] to allow AC updates
  to all instance names. You can use ['foo', 'bar'] to allow AC updates
  for 'foo', 'foo/abc', 'bar', 'bar/xyz', etc.

- Let the 'schedulers' option also do prefix matching. This means that
  an entry for 'foo' will forward traffix for 'foo', 'foo/abc',
  'foo/xyz', etc. all to a single scheduler. It is important to mention
  that this will now also strip the 'foo' prefix from the instance name
  that is sent to the scheduler! If this is not desired, it can be added
  back with the addInstanceNamePrefix option.

- Similarly, a DemultiplexingBlobAccess has been added. Where the
  'schedulers' routes scheduler requests, DemultiplexingBlobAccess can
  now be used to route storage requests. This allows you to spin up
  bb_storage as a local proxy that forwards traffic to multiple
  clusters.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -19,6 +19,7 @@ gomock(
     out = "blobstore.go",
     interfaces = [
         "BlobAccess",
+        "DemultiplexedBlobAccessGetter",
         "HTTPClient",
     ],
     library = "//pkg/blobstore:go_default_library",
@@ -63,7 +64,7 @@ gomock(
     out = "builder.go",
     interfaces = [
         "BuildQueue",
-        "BuildQueueGetter",
+        "DemultiplexedBuildQueueGetter",
     ],
     library = "//pkg/builder:go_default_library",
     package = "mock",
@@ -85,6 +86,14 @@ gomock(
     out = "cloud_aws.go",
     interfaces = ["S3"],
     library = "//pkg/cloud/aws:go_default_library",
+    package = "mock",
+)
+
+gomock(
+    name = "digest",
+    out = "digest.go",
+    interfaces = ["InstanceNameMatcher"],
+    library = "//pkg/digest:go_default_library",
     package = "mock",
 )
 
@@ -143,6 +152,14 @@ gomock(
     package = "mock",
 )
 
+gomock(
+    name = "util",
+    out = "util.go",
+    interfaces = ["ErrorLogger"],
+    library = "//pkg/util:go_default_library",
+    package = "mock",
+)
+
 go_library(
     name = "go_default_library",
     srcs = [
@@ -154,15 +171,18 @@ go_library(
         ":builder.go",
         ":clock.go",
         ":cloud_aws.go",
+        ":digest.go",
         ":filesystem.go",
         ":grpc.go",
         ":grpc_go.go",
         ":redis.go",
         ":remoteexecution.go",
+        ":util.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blobstore/local:go_default_library",
         "//pkg/builder:go_default_library",
@@ -170,6 +190,7 @@ go_library(
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
+        "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/request:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
@@ -178,6 +199,5 @@ go_library(
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//metadata:go_default_library",
-        "@org_golang_x_sys//unix:go_default_library",
     ],
 )
