Add replication support to ReadFallback
Package move is necessary because //pkg/blobstore cannot depend on
//pkg/blobstore/replication

Otherwise this is just cribbed from Mirrored. Note that backwards
compatibility is maintained in the case where replicator is nil, so
existing configs keep doing the same thing (and not everybody wants
replication here, it's not always the right thing to do).

Signed-off-by: Andrew Suffield <asuffield@gmail.com>

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
         "//pkg/blobstore/local:go_default_library",
         "//pkg/blobstore/mirrored:go_default_library",
         "//pkg/blobstore/readcaching:go_default_library",
+        "//pkg/blobstore/readfallback:go_default_library",
         "//pkg/blobstore/replication:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
         "//pkg/blockdevice:go_default_library",
