add common editor junk, from github.com/github/gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 /bazel-*
+
+# Emacs
+*~
+.\#*
+\#*\#
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+[._]*.un~
