Teach CloudBlobAccess to touch metadata during FindMissing calls
This makes cloud objects more LRU-like in their expiry behavior, and
hence more usable.

Initially implemented for S3, others will take some experimentation.

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/circular:go_default_library",
+        "//pkg/blobstore/cloud:go_default_library",
         "//pkg/blobstore/completenesschecking:go_default_library",
         "//pkg/blobstore/grpcclients:go_default_library",
         "//pkg/blobstore/local:go_default_library",
