Add trace span details
This injects new spans in MetricsBlobAccess so that traces show the
path through BlobAccess layers, and inserts annotations into
BuildQueue spans to identify the digests involved.

This isn't the last word in tracing, but it does appear to be the
critical pieces of data for these operations.

--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "demultiplexing_build_queue.go",
         "forwarding_build_queue.go",
         "non_executable_build_queue.go",
+        "tracing_build_queue.go",
         "update_enabled_toggling_build_queue.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
@@ -17,6 +18,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@io_opencensus_go//trace:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
