Make LocalBlobAccess recover from data integrity errors properly
LocalBlobAccess currently only has a boolean flag to enable/disable
integrity checking. This is far too coarse. This commit adds the ability
to use digest.ExistenceCache to temporarily disable data integrity
checking on a per-blob basis. It also extends LocalBlobAccess to recover
from data integrity errors gracefully.

To be able to implement this, I had to make a bunch of architectural
changes:

- buffer.Repair{Strategy,Func} has been replaced by
  buffer.{Source,DataIntegrityCallback}, respectively. The big
  difference is that this new callback type is also invoked when data is
  correct. This is needed to accurately determine which blobs are safe
  to read without data integrity checking.

- The StorageType interface is carved up. All buffer creation functions
  have been moved into a new ReadBufferFactory type, to make it more
  explicit that this is used to create buffers for reading.

- While there, the StorageType.GetDigestKey() function has been
  eliminated entirely. Individual BlobAccess types are now responsible
  for tracking digest.KeyFormat themselves. This is needed to fix a bug
  when DemultiplexingBlobAccess is used in combination with
  ExistenceCachingBlobAccess. Without it, ExistenceCachingBlobAccess may
  fail to take the instance name into account.

- Related to that, NewBlobAccessFromConfiguration() now returns a
  BlobAccessInfo structure that contains the digest key format, so that
  the user knows whether the backend respects or ignores instance names.

- A new ValidationCachingReadBufferFactory is added that ties
  digest.ExistenceCache into LocalBlobAccess's
  PartitioningBlockAllocator. It is going to be used as a decorator
  around the other *ReadBufferFactory types.

- Development convenience: Digest now has a ToSingletonSet() function to
  easily (and more efficiently) create digest.Sets consisting of a
  single element. This is needed to keep
  ValidationCachingReadBuf

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -21,6 +21,7 @@ gomock(
         "BlobAccess",
         "DemultiplexedBlobAccessGetter",
         "HTTPClient",
+        "ReadBufferFactory",
     ],
     library = "//pkg/blobstore:go_default_library",
     package = "mock",
@@ -52,8 +53,8 @@ gomock(
     out = "buffer.go",
     interfaces = [
         "ChunkReader",
+        "DataIntegrityCallback",
         "ErrorHandler",
-        "RepairFunc",
     ],
     library = "//pkg/blobstore/buffer:go_default_library",
     package = "mock",
