--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -3,22 +3,23 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "ac_storage_type.go",
+        "ac_read_buffer_factory.go",
         "blob_access.go",
-        "cas_storage_type.go",
+        "cas_read_buffer_factory.go",
         "cloud_blob_access.go",
         "demultiplexing_blob_access.go",
         "empty_blob_injecting_blob_access.go",
         "error_blob_access.go",
         "existence_caching_blob_access.go",
-        "icas_storage_type.go",
+        "icas_read_buffer_factory.go",
         "instance_name_access_checking_blob_access.go",
         "metrics_blob_access.go",
+        "read_buffer_factory.go",
         "redis_blob_access.go",
         "reference_expanding_blob_access.go",
         "remote_blob_access.go",
         "size_distinguishing_blob_access.go",
-        "storage_type.go",
+        "validation_caching_read_buffer_factory.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore",
     visibility = ["//visibility:public"],
@@ -27,6 +28,7 @@ go_library(
         "//pkg/clock:go_default_library",
         "//pkg/cloud/aws:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/filesystem:go_default_library",
         "//pkg/proto/icas:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
@@ -52,6 +54,7 @@ go_test(
         "instance_name_access_checking_blob_access_test.go",
         "redis_blob_access_test.go",
         "reference_expanding_blob_access_test.go",
+        "validation_caching_read_buffer_factory_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
@@ -59,6 +62,7 @@ go_test(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/eviction:go_default_library",
+        "//pkg/filesystem:go_default_library",
         "//pkg/proto/icas:go_default_library",
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
