--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -51,17 +51,5 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["blob_access_creator_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//internal/mock:go_default_library",
-        "//pkg/digest:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
