--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blockdevice:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/util:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
