--- a/pkg/blobstore/cloud/BUILD.bazel
+++ b/pkg/blobstore/cloud/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@dev_gocloud//blob:go_default_library",
