--- a/pkg/blobstore/cloud/BUILD.bazel
+++ b/pkg/blobstore/cloud/BUILD.bazel
@@ -26,13 +26,19 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["cloud_blob_access_test.go"],
+    srcs = [
+        "cloud_blob_access_test.go",
+        "s3_copy_mutator_test.go",
+    ],
     embed = [":go_default_library"],
     race = "on",
     deps = [
+        "//internal/mock:go_default_library",
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
+        "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@dev_gocloud//blob/memblob:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
