--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -5,9 +5,11 @@ go_library(
     srcs = [
         "buckets.go",
         "error_logger.go",
+        "http_client.go",
         "jsonnet.go",
         "status.go",
         "tls.go",
+        "trace.go",
         "uuid.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
@@ -18,6 +20,12 @@ go_library(
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_jsonnet//:go_default_library",
         "@com_github_google_uuid//:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
+        "@io_opentelemetry_go_contrib_instrumentation_net_http//:go_default_library",
+        "@io_opentelemetry_go_otel//api/global:go_default_library",
+        "@io_opentelemetry_go_otel//api/propagation:go_default_library",
+        "@io_opentelemetry_go_otel//api/trace:go_default_library",
+        "@io_opentelemetry_go_otel//codes:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
