Satiate 'go mod tidy' by providing package comments in otherwise "empty" packages
go mod tidy fails to finish its job of cleaning up unused dependencies
because it is confused by the packages which contains only protos
(since these will be generated by bazel, there are no .go
files). Satisfy it that these packages do exist by adding package
comments to all of them.

At this point, go mod tidy removes ineffassign as unused. Following
the pattern in
https://github.com/go-modules-by-example/index/blob/master/010_tools/README.md
we create a dummy tools dependency which is otherwise ignored, so that
go mod tidy understands we want to keep that one.

--- a/pkg/proto/configuration/eviction/BUILD.bazel
+++ b/pkg/proto/configuration/eviction/BUILD.bazel
@@ -17,6 +17,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":eviction_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/eviction",
     visibility = ["//visibility:public"],
