--- a/pkg/proto/configuration/blobstore/BUILD.bazel
+++ b/pkg/proto/configuration/blobstore/BUILD.bazel
@@ -35,6 +35,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":blobstore_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/blobstore",
     visibility = ["//visibility:public"],
