--- a/pkg/proto/configuration/digest/BUILD.bazel
+++ b/pkg/proto/configuration/digest/BUILD.bazel
@@ -22,6 +22,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":digest_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/digest",
     visibility = ["//visibility:public"],
