--- a/pkg/proto/configuration/global/BUILD.bazel
+++ b/pkg/proto/configuration/global/BUILD.bazel
@@ -4,6 +4,7 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":global_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/global",
     visibility = ["//visibility:public"],
