--- a/pkg/proto/configuration/tls/BUILD.bazel
+++ b/pkg/proto/configuration/tls/BUILD.bazel
@@ -17,6 +17,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":tls_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/tls",
     visibility = ["//visibility:public"],
