--- a/pkg/proto/replicator/BUILD.bazel
+++ b/pkg/proto/replicator/BUILD.bazel
@@ -23,6 +23,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":replicator_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/replicator",
     visibility = ["//visibility:public"],
