--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -29,6 +29,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":bb_storage_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage",
     visibility = ["//visibility:public"],
