Convert the style and lint bits of github workflows into a runnable command
It's not pretty, and it's very much writing a shell script in golang,
but it lets me run the whole thing locally instead of repeatedly
pushing and waiting for the github workflow to tell me that I don't
quite have the formatting the way it wants.

--- a/tools/github_workflows/BUILD.bazel
+++ b/tools/github_workflows/BUILD.bazel
@@ -13,5 +13,6 @@ jsonnet_to_json(
         "master.yaml",
         "pull-requests.yaml",
     ],
+    visibility = ["//tools/tidy:__pkg__"],
     deps = [":workflows_template"],
 )
