--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -6,8 +6,10 @@ load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 # gazelle:resolve proto go build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library
 gazelle(
     name = "gazelle",
+    visibility = ["//tools/tidy:__pkg__"],
 )
 
 buildifier(
     name = "buildifier",
+    visibility = ["//tools/tidy:__pkg__"],
 )
