Generalize block device support to also work with regular files
Right now, LocalBlobAccess can only store its data on a raw block
device. It cannot use regular files on disk. Let's remove this
limitation by extending pkg/blockdevice to also support regular files.

This new code also adds its own configuration message, meaning that any
piece of code that needs block device like storage can use a uniform way
of configuring it. BlockDeviceBackedFilePool in bb-remote-execution can
also make use of this.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -49,6 +49,14 @@ gomock(
 )
 
 gomock(
+    name = "blockdevice",
+    out = "blockdevice.go",
+    interfaces = ["BlockDevice"],
+    library = "//pkg/blockdevice:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "buffer",
     out = "buffer.go",
     interfaces = [
@@ -168,6 +176,7 @@ go_library(
         ":blobstore.go",
         ":blobstore_local.go",
         ":blobstore_replication.go",
+        ":blockdevice.go",
         ":buffer.go",
         ":builder.go",
         ":clock.go",
