Detach pkg/blobstore/buffer from pkg/filesystem
We're currently making use of the FileReader type, even though we're
only interested in io.ReaderAt and io.Closer. Introduce our own
io.ReadAtCloser. This makes it safe to add new methods to FileReader
without requiring that all code in the tree fully implements it.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -63,6 +63,7 @@ gomock(
         "ChunkReader",
         "DataIntegrityCallback",
         "ErrorHandler",
+        "ReadAtCloser",
     ],
     library = "//pkg/blobstore/buffer:go_default_library",
     package = "mock",
