Add LocalBlobAccess, version 2
Improvements over the old version of LocalBlobAccess include:

- Support for file-backed storage, both for the hash table index
  (a.k.a. key-location map) and the data (a.k.a. blocks).

- Persistency. It is now possible for LocalBlobAccess to retain its
  contents across restarts. All of this should come at relatively little
  overhead in terms of performance, as it only causes fsync() to be
  called in the background once every so often.

- Checksum validation of key-location map entries. This means that bit
  flips there will not cause LocalBlobAccess to interpret random
  garbage. Corrupted entries will be ignored automatically.

Please refer to ADR #5 for details that went into the design of this new
storage backend:

https://github.com/buildbarn/bb-adrs/blob/master/0005-local-blob-access-persistency.md

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -33,8 +33,23 @@ gomock(
     interfaces = [
         "Block",
         "BlockAllocator",
-        "DigestLocationMap",
+        "BlockList",
+        "BlockListPutFinalizer",
+        "BlockListPutWriter",
+        "BlockReferenceResolver",
+        "DataSyncer",
+        "KeyBlobGetter",
+        "KeyBlobMap",
+        "KeyBlobPutFinalizer",
+        "KeyBlobPutWriter",
+        "KeyLocationMap",
+        "LocationBlobGetter",
+        "LocationBlobMap",
+        "LocationBlobPutFinalizer",
+        "LocationBlobPutWriter",
         "LocationRecordArray",
+        "PersistentStateSource",
+        "PersistentStateStore",
     ],
     library = "//pkg/blobstore/local:go_default_library",
     package = "mock",
@@ -112,6 +127,7 @@ gomock(
     out = "filesystem.go",
     interfaces = [
         "Directory",
+        "FileAppender",
         "FileReader",
         "FileReadWriter",
     ],
@@ -200,6 +216,7 @@ go_library(
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
+        "//pkg/proto/blobstore/local:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/request:go_default_library",
