--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -4,15 +4,29 @@ go_library(
     name = "go_default_library",
     srcs = [
         "block_allocator.go",
-        "digest_location_map.go",
-        "hashing_digest_location_map.go",
+        "block_device_backed_block_allocator.go",
+        "block_device_backed_location_record_array.go",
+        "block_list.go",
+        "block_reference.go",
+        "directory_backed_persistent_state_store.go",
+        "hashing_key_location_map.go",
         "in_memory_block_allocator.go",
         "in_memory_location_record_array.go",
-        "local_blob_access.go",
+        "key.go",
+        "key_blob_map.go",
+        "key_blob_map_backed_blob_access.go",
+        "key_location_map.go",
         "location.go",
+        "location_based_key_blob_map.go",
+        "location_blob_map.go",
         "location_record_array.go",
         "location_record_key.go",
-        "partitioning_block_allocator.go",
+        "old_current_new_location_blob_map.go",
+        "periodic_syncer.go",
+        "persistent_block_list.go",
+        "persistent_state_source.go",
+        "persistent_state_store.go",
+        "volatile_block_list.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/local",
     visibility = ["//visibility:public"],
@@ -20,8 +34,12 @@ go_library(
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blockdevice:go_default_library",
+        "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/filesystem:go_default_library",
+        "//pkg/proto/blobstore/local:go_default_library",
         "//pkg/util:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
@@ -31,12 +49,19 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
-        "hashing_digest_location_map_test.go",
+        "block_device_backed_block_allocator_test.go",
+        "block_device_backed_location_record_array_test.go",
+        "directory_backed_persistent_state_store_test.go",
+        "hashing_key_location_map_test.go",
         "in_memory_block_allocator_test.go",
         "in_memory_location_record_array_test.go",
-        "local_blob_access_test.go",
+        "key_blob_map_backed_blob_access_test.go",
+        "location_based_key_blob_map_test.go",
         "location_record_key_test.go",
-        "partitioning_block_allocator_test.go",
+        "old_current_new_location_blob_map_test.go",
+        "periodic_syncer_test.go",
+        "persistent_block_list_test.go",
+        "volatile_block_list_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
@@ -44,7 +69,10 @@ go_test(
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/filesystem:go_default_library",
+        "//pkg/proto/blobstore/local:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
