--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "configuration.go",
         "memory_mapped_block_device_unix.go",
         "new_block_device_from_device_disabled.go",
+        "new_block_device_from_device_freebsd.go",
         "new_block_device_from_device_linux.go",
         "new_block_device_from_file_disabled.go",
         "new_block_device_from_file_unix.go",
